--- a/README.Rmd
+++ b/README.Rmd
@@ -88,7 +88,7 @@ This is followed by a summary of the results of the optimization:
 
 We here present the basic workflow on a literature example. The aim of this chapter is to introduce the functionality of the packages' functions and to explain the most relevant in- and outputs on the example of a use-case in Eastern Panama. The data of this study can be accessed in *Appendix A* of Gosling et al. (2020) and is also firmly integrated into the *optimLanduse* package. The *exampleData("exampleGosling.xlsx")* function hels loading the data in the environment. The data integrated in the package already comes in the required *optimLanduse* format, so that it can be used without any data processing.
 
-Enriching agricultural farms with agroforestry has been promoted as a means to enhance ecosystem functioning in farms in Panama, while maintaining important economic functions. Gosling et al. (2020) therefore used the here presented optimization model to understand smallholder farmers' perceptions and values of agroforestry systems. They identified 10 relevant indicators for a predefined set of land-cover alternatives, which represent the farmers' goals (such as long and short-term income or labor demand, as well as carbon and water regulation). A survey with local farmers provided the empirical basis in the form of the farmer's expectations on the indicator performance of each land-cover (arithmetic mean) and its uncertainties (using the standard error of the mean across the survey's respondents). Descriptions of the land-cover alternatives and indicators can be found in Tables 1 and 2 in Gosling et al. (2020).
+Enriching agricultural farms with agroforestry has been promoted as a means to enhance ecosystem functioning in farms in Panama, while maintaining important economic functions. Gosling et al. (2020) therefore used the here presented optimization model to understand smallholder farmer's perceptions and values of agroforestry systems. They identified 10 relevant indicators for a predefined set of land-cover alternatives, which represent the farmer's goals (such as long and short-term income or labor demand, as well as carbon and water regulation). A survey with local farmers provided the empirical basis in the form of the farmer's expectations on the indicator performance of each land-cover (arithmetic mean) and its uncertainties (using the standard error of the mean across the survey's respondents). Descriptions of the land-cover alternatives and indicators can be found in Tables 1 and 2 in Gosling et al. (2020).
 
 **Loading Required Packages and Importing the Data**
 
@@ -373,7 +373,7 @@ ggplot(performance_socioeconomic$scenarioTable,
 
 *Fig. 7: The performance of each of the socio-economic indicators. The colored points are the achieved levels of the indicators of all scenarios. The dotted, horizontal red line illustrates the guaranteed performance* $(1-\beta)$*, and thus the robust feasible solution of the program (Equation 1 in Husmann et al, n.d.).*
 
-An analysis of the performance of the socio-economic indicators shows that the performances of the three relevant indicators equal the multifunctional portfolio (Fig. 7). The result is still defined by financial stability, investment costs and meeting household needs. Consequently, the guaranteed performance $(1-\beta)$ also equals the multifunctional portfolio. Therefore, this socio-economic portfolio also does not perfectly reflect the currently observed land-cover composition. This means that further indicators appear to be relevant for the actual farmers' decisions.
+An analysis of the performance of the socio-economic indicators shows that the performances of the three relevant indicators equal the multifunctional portfolio (Fig. 7). The result is still defined by financial stability, investment costs and meeting household needs. Consequently, the guaranteed performance $(1-\beta)$ also equals the multifunctional portfolio. Therefore, this socio-economic portfolio also does not perfectly reflect the currently observed land-cover composition. This means that further indicators appear to be relevant for the actual farmer's decisions.
 
 ### Ecological
 
@@ -406,7 +406,7 @@ result_ecologic$landUse %>% gather(key = landCoverOption, value = landCoverShare
 
 *Fig. 8: Composition of the optimized farm (based on data of Gosling et al., 2020), including only ecological indicators. Each land-cover option is shown in an allocated share (%).*
 
-As the second example, the ecological indicator group leads to a land-cover portfolio comprising of only forests (Fig. 8; corresponds to Fig. 5 of Gosling et al., 2020). It can be concluded that all contributions of all other land-cover alternatives in all scenarios (even the optimistic ones) to the ecological indicators are lower than those of forests. The land-cover composition of the ecologic bundle differs fundamentally from the currently observed portfolio. The ecological indicators are therefore apparently not sufficient to approximate the farmers' current perceptions.
+As the second example, the ecological indicator group leads to a land-cover portfolio comprising of only forests (Fig. 8; corresponds to Fig. 5 of Gosling et al., 2020). It can be concluded that all contributions of all other land-cover alternatives in all scenarios (even the optimistic ones) to the ecological indicators are lower than those of forests. The land-cover composition of the ecologic bundle differs fundamentally from the currently observed portfolio. The ecological indicators are therefore apparently not sufficient to approximate the farmer's current perceptions.
 
 ### Immediate Economic Success
 
@@ -440,7 +440,7 @@ result_short$landUse %>% gather(key = landCoverOption, value = landCoverShare, 1
 
 *Fig. 9: Composition of the optimized farm (based on data of Gosling et al., 2020), including the prospective relevant indicators of the farmers only. Each land-cover option is shown in an allocated share (%).*
 
-The third example is composed of a bundle of indicators that prospectively reflect the farmer's needs and perceptions (Fig. 9). Corresponding to Fig. 5 of Gosling et al. (2020), this scenario only consists of indicators that approximate immediate economic success. Indeed, the land-cover composition of this portfolio best reflects the portfolio observed in Eastern Panama. Hence, these indicators presumably best reflect the farmers' goals and perceptions in Eastern Panama. The difference between this portfolio and the desired multifunctional portfolio (Fig. 2) highlights the requirements a land-cover alternative must fulfill to meet the farmers' requirements and goals. The silvopasture, as defined in Gosling et al. (2020), may not serve the requirements of the farmers sufficiently. Since farmers rate liquidity and meeting household needs higher than long-term profit and economic stability, pasture outperforms silvopasture in the immediate return scenario. Policies or development plans may consider these indicators as key elements when promoting landscape development toward multifunctional landscapes.
+The third example is composed of a bundle of indicators that prospectively reflect the farmer's needs and perceptions (Fig. 9). Corresponding to Fig. 5 of Gosling et al. (2020), this scenario only consists of indicators that approximate immediate economic success. Indeed, the land-cover composition of this portfolio best reflects the portfolio observed in Eastern Panama. Hence, these indicators presumably best reflect the farmer's goals and perceptions in Eastern Panama. The difference between this portfolio and the desired multifunctional portfolio (Fig. 2) highlights the requirements a land-cover alternative must fulfill to meet the farmer's requirements and goals. The silvopasture, as defined in Gosling et al. (2020), may not serve the requirements of the farmers sufficiently. Since farmers rate liquidity and meeting household needs higher than long-term profit and economic stability, pasture outperforms silvopasture in the immediate return scenario. Policies or development plans may consider these indicators as key elements when promoting landscape development toward multifunctional landscapes.
 
 ## Pay-Off Matrix
 
@@ -513,7 +513,7 @@ knitr::kable(payOff_Matrix, row.names = F)
 knitr::kable(payOff_Matrix, row.names = F)
 ```
 
-It can be followed from the pay-off matrix (Table 3), that, e.g., liquidity and long-term income are fulfilled to high degrees when optimized considering the general preferences only (row 2). In contrast, farmers' requirements regarding investment costs (0.012) and management complexity (0.09) are fulfilled poorly.
+It can be followed from the pay-off matrix (Table 3), that, e.g., liquidity and long-term income are fulfilled to high degrees when optimized considering the general preferences only (row 2). In contrast, farmer's requirements regarding investment costs (0.012) and management complexity (0.09) are fulfilled poorly.
 
 When optimized considering only the water supply protection (row 10), the indicators most relevant for the farmers (meeting household needs and Liquidity, Fig. 9) perform very poorly (0.0). This shows that the water supply function is clearly antagonistic to the farmer's requirements.
 
