--- a/README.Rmd
+++ b/README.Rmd
@@ -90,7 +90,7 @@ This is followed by a summary of the results of the optimization:
 
 # Example Application
 
-We here present the basic workflow on a literature example. The aim of this chapter is to introduce the functionality of the packages' functions and to explain the most relevant in- and outputs on the example of a use-case in Eastern Panama. The data of this study can be accessed in *Appendix A* of Gosling et al. (2020) and is also firmly integrated into the *optimLanduse* package. The *exampleData("exampleGosling.xlsx")* function hels loading the data in the environment. The data integrated in the package already comes in the required *optimLanduse* format, so that it can be used without any data processing.
+We here present the basic workflow on a literature example. The aim of this chapter is to introduce the functionality of the packages' functions and to explain the most relevant in- and outputs on the example of a use-case in Eastern Panama. The data of this study can be accessed in *Appendix A* of Gosling et al. (2020) and is also firmly integrated into the *optimLanduse* package. The *exampleData("exampleGosling.xlsx")* function helps loading the data in the environment. The data integrated in the package already comes in the required *optimLanduse* format, so that it can be used without any data processing.
 
 Enriching agricultural farms with agroforestry has been promoted as a means to enhance ecosystem functioning in farms in Panama, while maintaining important economic functions. Gosling et al. (2020) therefore used the here presented optimization model to understand smallholder farmer's perceptions and values of agroforestry systems. They identified 10 relevant indicators for a predefined set of land-cover alternatives, which represent the farmer's goals (such as long and short-term income or labor demand, as well as carbon and water regulation). A survey with local farmers provided the empirical basis in the form of the farmer's expectations on the indicator performance of each land-cover (arithmetic mean) and its uncertainties (using the standard error of the mean across the survey's respondents). Descriptions of the land-cover alternatives and indicators can be found in Tables 1 and 2 in Gosling et al. (2020).
 
@@ -122,7 +122,7 @@ init <- initScenario(coefTable = dat,
                      # optimistic contribution of each indicator directly defined
                      # by their average 
                      fixDistance = NA) 
-# 3 is the default
+                     # 3 is the default
 ```
 
 In line with Gosling et al. (2020), we chose the expected value of the indicators as optimistic outcomes *(optimisticRule = "expectation")* and the same uncertainty level for the calculation of the averaged distances and the uncertainty space (*fixDistance = NA*, see Equations 4 and 9 in Husmann et al., n.d. for more details).
@@ -193,7 +193,7 @@ Fig. 3 can be used to further explore the effects of the indicators on the model
 
 Here, the worst performing scenarios of indicators 1 (financial stability), 3 (investment costs) and 8 (meeting household needs) have equally the largest distances. It can be seen that the portfolio appears to be driven by these 3 indicators. In the worst-performing uncertainty scenarios, these 3 indicators show the maximum distances across all indicators. In other words, the guaranteed performance $1-\beta$ of the portfolio is defined by these 3 indicators. A full list with performances of all individual scenarios is provided by the output *scenarioTable* after using the *calcPerformance()* function (Table 2).
 
-It follows that these 3 indicators are crucial when discussing future land-cover alternatives and concepts. According to Gosling et al. (2020), this result is in line with current observed behavior since the need for short-term liquidity mainly drives decisions of smallholder farmers in the study region. Intermediate-term economic success is not relevant until the household consumption is secured. While the performances of indicator 1 differ relatively strongly among the scenarios, the performances of indicators 3 and 8 are quite similar within all scenarios. This is attributed to the larger standard errors of this indicator. Thus, it may be worth investigating the particular reasons behind this high uncertainty for indicator 1.
+It follows that these 3 indicators are crucial when discussing future land-cover alternatives and concepts. According to Gosling et al. (2020), this result is in line with current observed behavior since the need for short-term liquidity mainly drives smallholder farmers' decisions in the study region. Intermediate-term economic success is not relevant until household consumption is secured. While the performances of indicator 1 differ relatively strongly among the scenarios, the performances of indicators 3 and 8 are quite similar within all scenarios. This is attributed to the larger standard errors of this indicator. Thus, it may be worth investigating the particular reasons behind this high uncertainty for indicator 1.
 
 ```{r, message=FALSE, warning=FALSE}
 performance$beta
@@ -262,7 +262,7 @@ ggplot(performance_current$scenarioTable,
 
 *Fig. 4: The performance of each of the 10 indicators for the result of the currently observed land-cover composition. The colored points are the achieved levels of the indicators of all scenarios s. The dotted, horizontal red line illustrates the guaranteed performance* $(1-\beta)$*, thus the robust feasible solution of the program (Equation 1 in Husmann et al.,  n.d.).*
 
-Setting the arguments for the lower and upper bounds exactly to the currently observed land-cover composition forces a solution that corresponds to the current land-cover composition (Fig. 4). It allows for the comparison and evaluation of the differences of the optimized land-cover composition with the currently observed composition. Comparing, e.g., the guaranteed performances $1-\beta$ provides an objective measure of how an optimization enhances the achievements of the overall performance. A deeper look at the performances of the indicators reveals which indicators particularly benefit from optimization. Due to the compromise nature of the approach, indicators can also perfom worse in the optimized portfolio when compared to the current land-cover composition.
+Setting the arguments for the lower and upper bounds exactly to the currently observed land-cover composition forces a solution that corresponds to the current land-cover composition (Fig. 4). It allows for the comparison and evaluation of the differences of the optimized land-cover composition with the currently observed composition. Comparing, e.g., the guaranteed performances $1-\beta$ provides an objective measure of how an optimization enhances the achievements of the overall performance. A deeper look at the performances of the indicators reveals which indicators particularly benefit from optimization. Due to the compromise nature of the approach, indicators can also perform worse in the optimized portfolio when compared to the current land-cover composition.
 
 Amounting to 0.387, the guaranteed performance of the multifunctional portfolio is considerably higher than the guaranteed performance of the current land-cover composition (0.089). In the optimized portfolio, each of the indicators considered is thus fulfilled by at least 38.7% compared to its individual achievable level. The comparison of the performances of the currently observed land-cover composition (Fig. 4) with the performances of the multifunctional portfolio (Fig. 3) reveals that, for example, the performance of the financial stability is significantly higher in the optimized portfolio. The performance of meeting households needs and liquidity, for example, decreases significantly. The price to be paid for the best-possible compromise is thus a fundamentally lower performance of both indicators that approximate the immediate economic success. The generally desirable multifunctional portfolio therefore does not promise immediate economic success for the farmers.
 
@@ -539,7 +539,7 @@ When optimized considering only the water supply protection (row 10), the indica
 
 ## The Use of *fixDistance*
 
-It can be advantageous to define distinct uncertainty levels for the calculation of the distances to the maximum achievable level (the reference) $d_{iu}$ (Equation 3 in Husmann et al., n.d.) and the actual distances under a certain land-cover composition $R_{liu}$ (Equation 5 in Husmann et al., n.d., see also Equation 9). Too narrow uncertainty spaces of $R_{liu}$ could restrict the state space of the distances too strictly. The broader uncertainty spaces allow for higher freedom of $R_{liu}$, which allows to cover more land-cover compositions. The distances are thus allowed to be higher. This usually results in a more similar composition of the land-cover composition with similar levels of uncertainty. The transitions between the portfolios under rising uncertainty values are smoother. The disadvantage of distinct uncertainty spaces is that the distances can no longer be straightforwardly  interpreted. The distances calculated using different uncertainty spaces considered in the denominator and the counter of Equation 3 (Husmann et al., n.d.) cannot be interpreted as degree of fulfillment any more.
+It can be advantageous to define distinct uncertainty levels for the calculation of the distances to the maximum achievable level (the reference) $d_{iu}$ (Equation 3 in Husmann et al., n.d.) and the actual distances under a certain land-cover composition $R_{liu}$ (Equation 5 in Husmann et al., n.d., see also Equation 9). Too narrow uncertainty spaces of $R_{liu}$ could restrict the state space of the distances too strictly. The broader uncertainty spaces allow for higher freedom of $R_{liu}$, which allows to cover more land-cover compositions. The distances are thus allowed to be higher. This usually results in a more similar composition of the land-cover composition with similar levels of uncertainty. The transitions between the portfolios under rising uncertainty values are smoother. The disadvantage of distinct uncertainty spaces is that the distances can no longer be straightforwardly  interpreted. The distances calculated using different uncertainty spaces considered in the denominator and the counter of Equation 3 (Husmann et al., n.d.) cannot be interpreted as a degree of fulfillment anymore.
 
 ```{r, fig.height = 5, fig.width = 7}
 
