--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Supplement to the manuscript MEE-22-04-344
+title: optimLanduse - Robust Land-cover Optimization
 output: 
   github_document:
     toc: true
