--- a/README.Rmd
+++ b/README.Rmd
@@ -18,13 +18,13 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Introduction
 
-When managing ecosystems, the question arises as to how to simultaneously combat biodiversity loss and maintain ecosystem functioning while improving human welfare. Designing multifunctional landscapes means deciding upon the composition and configuration of land-cover types, given that landscape patterns drive the landscape\`s ecological value and its ability to satisfy societal demands. Land-cover allocation models, particularly optimization approaches, have proven helpful in revealing trade-offs between multiple objectives and services provided by different land-cover compositions.
+This README is closely related to a publication in **Methods in Ecology and Evolution** (Husmann et al. 2022). When managing ecosystems, the question arises as to how to simultaneously combat biodiversity loss and maintain ecosystem functioning while improving human welfare. Designing multifunctional landscapes means deciding upon the composition and configuration of land-cover types, given that landscape patterns drive the landscape\`s ecological value and its ability to satisfy societal demands. Land-cover allocation models, particularly optimization approaches, have proven helpful in revealing trade-offs between multiple objectives and services provided by different land-cover compositions.
 
-The R package *optimLanduse* provides functions for easy and systematic applications of the robust multiobjective land-cover composition optimization approach of Knoke et al. (2016). It includes tools to determine the land-cover composition that best balances the multiple functions and services a landscape can provide, as well as tools for a deeper understanding and visualization of the contributions of the distinct indicators. The method has been developed and applied previously in a couple of studies, with some examples to be found in the [Literature] section. The methodological background of the approach can, e.g., be found in Knoke et al. (2016) and Husmann et al. (n.d.). We here refer to the nomenclature of Husmann et al. (n.d.). The package opens the approach of Knoke et al. (2016) to the community of landscape planners and provides opportunities for systematic or batch applications. To further enhance this, we have designed a shiny dashboard for the package to get a brief idea of its functionalities and to facilitate the usage of the package, see <http://rshiny.gwdg.de/apps/optimLanduse/>. The current package version optimizes land-cover compositions, but aspects of configuration may be added in the future.
+The R package *optimLanduse* provides functions for easy and systematic applications of the robust multiobjective land-cover composition optimization approach of Knoke et al. (2016). It includes tools to determine the land-cover composition that best balances the multiple functions and services a landscape can provide, as well as tools for a deeper understanding and visualization of the contributions of the distinct indicators. The method has been developed and applied previously in a couple of studies, with some examples to be found in the [Literature] section. The methodological background of the approach can, e.g., be found in Knoke et al. (2016) and Husmann et al. (2022). We here refer to the nomenclature of Husmann et al. (2022). The package opens the approach of Knoke et al. (2016) to the community of landscape planners and provides opportunities for systematic or batch applications. To further enhance this, we have designed a shiny dashboard for the package to get a brief idea of its functionalities and to facilitate the usage of the package, see <http://rshiny.gwdg.de/apps/optimLanduse/>. The current package version optimizes land-cover compositions, but aspects of configuration may be added in the future.
 
 # Detailed Description of the Functions’ In- and Outputs
 
-This chapter provides a brief overview of the package functions (Fig. 1). For detailed information on methodological background, functions, and workflow please also refer to Husmann et al. (n.d.). We further refer the reader to the respective help pages of the package for more information.
+This chapter provides a brief overview of the package functions (Fig. 1). For detailed information on methodological background, functions, and workflow please also refer to Husmann et al. (2022). We further refer the reader to the respective help pages of the package for more information.
 
 
 The stable version of the package can be installed using the CRAN server. The development version can be found on the GitHub project page.
@@ -54,7 +54,7 @@ The *initScenario()* function combines the user settings with the data into an *
 
 ![](./man/figures/exampleGraphic.png)
 
--   *uValue*: The argument for the uncertainty level ($f_u$, Equation 4 in Husmann et al., n.d.). A higher uValue reflects a higher risk aversion of the decision maker. See the help file of the *initScenario()* function for more details.
+-   *uValue*: The argument for the uncertainty level ($f_u$, Equation 4 in Husmann et al., 2022). A higher uValue reflects a higher risk aversion of the decision maker. See the help file of the *initScenario()* function for more details.
 
 -   *optimisticRule*: Specifies whether the optimistic contributions of each indicator should be defined either directly by their average, or by their average plus their uncertainty (if more is better) or minus their uncertainty (if less is better). The former option is most frequently used in recent literature and therefore builds the default.
 
@@ -71,19 +71,19 @@ The *solveScenario()* function takes the initialized *optimLanduse*-object and o
 The returned *list with results* contains different information on the optimization model. It first repeats the settings of the *initScenario()*. These include:
 
 -   *scenarioSettings*: A data frame with the *uValue* and the *optimisticRule*.
--   *scenarioTable*: A data frame with one row for each combination of worst-case and best-case outcomes of all indicators (thus the number of rows equals the number of scenarios $N_S$ in Husmann et al., n.d.). The columns contain relevant calculation steps for the optimization program. *adjSem\** are the uncertainty adjusted indicators ($R_{liu}$ in Husmann et al., n.d.). *minAdjSem* are the minimum uncertainty adjusted indicators $min(R_{liu})$ and $max(R_{liu})$ the maximum uncertainty adjusted indicators. diffAdjSem are the range between these uncertainty adjusted indicators $\delta_{\text{min,max}_{iu}}$.
+-   *scenarioTable*: A data frame with one row for each combination of worst-case and best-case outcomes of all indicators (thus the number of rows equals the number of scenarios $N_S$ in Husmann et al., 2022). The columns contain relevant calculation steps for the optimization program. *adjSem\** are the uncertainty adjusted indicators ($R_{liu}$ in Husmann et al., 2022). *minAdjSem* are the minimum uncertainty adjusted indicators $min(R_{liu})$ and $max(R_{liu})$ the maximum uncertainty adjusted indicators. diffAdjSem are the range between these uncertainty adjusted indicators $\delta_{\text{min,max}_{iu}}$.
 -   *coefObjective*: The optimization program is translated into a linear program with $N_L$ (number of land-cover options) coefficients for the inner solution. The inner solution is solved using the *lpSolveAPI()* function of the **lpSolveApi** package. *coefObjective* is the data frame that contains these coefficients.
 -   *coefConstraint*: A data frame with the respective constraints for the inner solution solved by *lpsolveAPI()*.
--   *distance*: The distance of each scenario to its own theoretically best-achievable contribution (reference). See Equation 3 in Husmann et al. (n.d.).
+-   *distance*: The distance of each scenario to its own theoretically best-achievable contribution (reference). See Equation 3 in Husmann et al. (2022).
 
 This is followed by a summary of the results of the optimization:
 
--   $\beta$: The maximum distance of the worst performing scenario (Equation 1 in Husmann et al., n.d.).
+-   $\beta$: The maximum distance of the worst performing scenario (Equation 1 in Husmann et al., 2022).
 -   *landUse*: The resulting land-cover composition after the optimization.
 
 ## Post-Processing
 
--   *calcPerformance()*: Attaches the portfolio performances of all indicators and scenarios as a data frame to the soved *optimLanduse* object. The data can be used for straightforward visualization of the performance (e.g. Fig. 3). The performance is defined as the relative distance to the maximum achievable level for each indicator and uncertainty scenario. It calculates as 1 - $d_{iu}$ (Equation 8, Husmann et al., n.d.)
+-   *calcPerformance()*: Attaches the portfolio performances of all indicators and scenarios as a data frame to the soved *optimLanduse* object. The data can be used for straightforward visualization of the performance (e.g. Fig. 3). The performance is defined as the relative distance to the maximum achievable level for each indicator and uncertainty scenario. It calculates as 1 - $d_{iu}$ (Equation 8, Husmann et al., 2022)
 
 # Example Application
 
@@ -122,7 +122,7 @@ init <- initScenario(coefTable = dat,
                      # 3 is the default
 ```
 
-In line with Gosling et al. (2020), we chose the expected value of the indicators as optimistic outcomes *(optimisticRule = "expectation")* and the same uncertainty level for the calculation of the averaged distances and the uncertainty space (*fixDistance = NA*, see Equations 4 and 9 in Husmann et al., n.d. for more details).
+In line with Gosling et al. (2020), we chose the expected value of the indicators as optimistic outcomes *(optimisticRule = "expectation")* and the same uncertainty level for the calculation of the averaged distances and the uncertainty space (*fixDistance = NA*, see Equations 4 and 9 in Husmann et al., 2022 for more details).
 
 **Solving the Initialized *optimLanduse* Object**
 
@@ -181,9 +181,9 @@ ggplot(performance$scenarioTable,
            vjust = -1)
 ```
 
-*Fig. 3: The performances of each of the 10 indicators for the ideal farm composition. The colored points are the achieved levels of the indicators of all scenarios. The dotted, horizontal red line illustrates the guaranteed performances* $(1-\beta)$*, and thus the robust feasible solution of the program (Equation 1 in Husmann et al, n.d.).*
+*Fig. 3: The performances of each of the 10 indicators for the ideal farm composition. The colored points are the achieved levels of the indicators of all scenarios. The dotted, horizontal red line illustrates the guaranteed performances* $(1-\beta)$*, and thus the robust feasible solution of the program (Equation 1 in Husmann et al, 2022).*
 
-Fig. 3 can be used to further explore the effects of the indicators on the modeled land-cover decisions. Looking at the performances of this multifunctional farm reveals which indicator equals $\beta$ and therefore defines the result (Equation 1 in Husmann et al., n.d.).
+Fig. 3 can be used to further explore the effects of the indicators on the modeled land-cover decisions. Looking at the performances of this multifunctional farm reveals which indicator equals $\beta$ and therefore defines the result (Equation 1 in Husmann et al., 2022).
 
 Here, the worst performing scenarios of indicators 1 (financial stability), 3 (investment costs) and 8 (meeting household needs) have equally the largest distances. It can be seen that the portfolio appears to be driven by these 3 indicators. In the worst-performing uncertainty scenarios, these 3 indicators show the maximum distances across all indicators. In other words, the guaranteed performance $1-\beta$ of the portfolio is defined by these 3 indicators. A full list with performances of all individual scenarios is provided by the output *scenarioTable* after using the *calcPerformance()* function (Table 2).
 
@@ -248,7 +248,7 @@ ggplot(performance_current$scenarioTable,
            vjust = -1)
 ```
 
-*Fig. 4: The performance of each of the 10 indicators for the result of the currently observed land-cover composition. The colored points are the achieved levels of the indicators of all scenarios s. The dotted, horizontal red line illustrates the guaranteed performance* $(1-\beta)$*, thus the robust feasible solution of the program (Equation 1 in Husmann et al.,  n.d.).*
+*Fig. 4: The performance of each of the 10 indicators for the result of the currently observed land-cover composition. The colored points are the achieved levels of the indicators of all scenarios s. The dotted, horizontal red line illustrates the guaranteed performance* $(1-\beta)$*, thus the robust feasible solution of the program (Equation 1 in Husmann et al.,  2022).*
 
 Setting the arguments for the lower and upper bounds exactly to the currently observed land-cover composition forces a solution that corresponds to the current land-cover composition (Fig. 4). It allows for the comparison and evaluation of the differences of the optimized land-cover composition with the currently observed composition. Comparing, e.g., the guaranteed performances $1-\beta$ provides an objective measure of how an optimization enhances the achievements of the overall performance. A deeper look at the performances of the indicators reveals which indicators particularly benefit from optimization. Due to the compromise nature of the approach, indicators can also perform worse in the optimized portfolio when compared to the current land-cover composition.
 
@@ -292,9 +292,9 @@ applyDf %>% gather(key = "land-cover option", value = "land-cover share", -u, -b
 
 *Fig. 5: Theoretically ideal farm compositions under increasing levels of uncertainty.*
 
-Solving the portfolio (Fig. 5) under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in Equation 4 in Husmann et al., n.d.) provides the sensitivity of the land-cover compositions to an increasing risk aversion of the farmers. Fig. 5 corresponds to Fig. 3 in Gosling et al. (2020). The higher the uncertainty level, the higher the uncertainty spaces of the indicators. Here, the composition of land-cover alternatives is relatively stable across different uncertainty levels (Fig. 5). An uValue of 0 leads to Portfolios without consideration of risk. Here, the results corresponds to an ordinary (non-robust) reference point approach. Comparing portfolios of uValue 0 with uValue 3, the share of forest decreases slightly from 41.2% to 34.3% and silvopasture from 45.9% to 44.9%. The share of crops decreases from 12.9% to 1%. At the same time, the shares of pasture increased from 0% to 9.6% and that of plantation from 0% to 10.2%.
+Solving the portfolio (Fig. 5) under increasing assumptions for the uncertainty levels (uValue, respectively $f_u$ in Equation 4 in Husmann et al., 2022) provides the sensitivity of the land-cover compositions to an increasing risk aversion of the farmers. Fig. 5 corresponds to Fig. 3 in Gosling et al. (2020). The higher the uncertainty level, the higher the uncertainty spaces of the indicators. Here, the composition of land-cover alternatives is relatively stable across different uncertainty levels (Fig. 5). An uValue of 0 leads to Portfolios without consideration of risk. Here, the results corresponds to an ordinary (non-robust) reference point approach. Comparing portfolios of uValue 0 with uValue 3, the share of forest decreases slightly from 41.2% to 34.3% and silvopasture from 45.9% to 44.9%. The share of crops decreases from 12.9% to 1%. At the same time, the shares of pasture increased from 0% to 9.6% and that of plantation from 0% to 10.2%.
 
-Alley cropping does not appear in any portfolio at any uncertainty level. It does not, on average, contribute best to any indicator (Table 1 in Husmann et al., n.d.). At least one other land-cover type contributes better to each indicator. It also contributes the worst (highest) to management complexity. This overall negative contribution does not change with increasing uncertainty levels. By trend, higher uncertainty levels lead to more diverse portfolios. The uncertainty spaces of all indicators increase with increasing uncertainty levels. These broadened individual uncertainty spaces then lead to a broader state space with a higher number of possible candidates for lowest-performing scenarios (i.e., scenarios that can under lower uncertainty not become part of the solution, as their distances could not be the maximum distance of any land-cover composition). Plantation, for example, is not part of the portfolio till an uncertainty level of 1.5. Plantation only provides the best to the long-term income while providing by far the worst to the general preferences. It also only provides minor contributions to the indicators. Under an uncertainty level of 1, for example, plantation provides the worst to the general preferences even if all other indicators are considered as worst-possible contributions. This ranking changes after uncertainty levels of 1.5 and above. At uncertainty level of 1.5, the worst-possible contribution of forests to the general preferences ($1 - 0.99 * 2 = -0.98$, see Table 1 in Husmann et al., n.d.) is then the worst possible contributing indicator among all land-cover types.
+Alley cropping does not appear in any portfolio at any uncertainty level. It does not, on average, contribute best to any indicator (Table 1 in Husmann et al., 2022). At least one other land-cover type contributes better to each indicator. It also contributes the worst (highest) to management complexity. This overall negative contribution does not change with increasing uncertainty levels. By trend, higher uncertainty levels lead to more diverse portfolios. The uncertainty spaces of all indicators increase with increasing uncertainty levels. These broadened individual uncertainty spaces then lead to a broader state space with a higher number of possible candidates for lowest-performing scenarios (i.e., scenarios that can under lower uncertainty not become part of the solution, as their distances could not be the maximum distance of any land-cover composition). Plantation, for example, is not part of the portfolio till an uncertainty level of 1.5. Plantation only provides the best to the long-term income while providing by far the worst to the general preferences. It also only provides minor contributions to the indicators. Under an uncertainty level of 1, for example, plantation provides the worst to the general preferences even if all other indicators are considered as worst-possible contributions. This ranking changes after uncertainty levels of 1.5 and above. At uncertainty level of 1.5, the worst-possible contribution of forests to the general preferences ($1 - 0.99 * 2 = -0.98$, see Table 1 in Husmann et al., 2022) is then the worst possible contributing indicator among all land-cover types.
 
 ## Selecting Specific Indicator Bundles - Investigating the Indicator's Sensitivities
 
@@ -369,7 +369,7 @@ ggplot(performance_socioeconomic$scenarioTable,
            vjust = -1)
 ```
 
-*Fig. 7: The performance of each of the socio-economic indicators. The colored points are the achieved levels of the indicators of all scenarios. The dotted, horizontal red line illustrates the guaranteed performance* $(1-\beta)$*, and thus the robust feasible solution of the program (Equation 1 in Husmann et al, n.d.).*
+*Fig. 7: The performance of each of the socio-economic indicators. The colored points are the achieved levels of the indicators of all scenarios. The dotted, horizontal red line illustrates the guaranteed performance* $(1-\beta)$*, and thus the robust feasible solution of the program (Equation 1 in Husmann et al, 2022).*
 
 An analysis of the performance of the socio-economic indicators shows that the performances of the three relevant indicators equal the multifunctional portfolio (Fig. 7). The result is still defined by financial stability, investment costs and meeting household needs. Consequently, the guaranteed performance $(1-\beta)$ also equals the multifunctional portfolio. Therefore, this socio-economic portfolio also does not perfectly reflect the currently observed land-cover composition. This means that further indicators appear to be relevant for the actual farmer's decisions.
 
@@ -444,7 +444,7 @@ The third example is composed of a bundle of indicators that prospectively refle
 
 A pay-off matrix provides information about the influence of single indicators on the sensitivity of the results (see e.g. Aldea et al., 2014, Table 1; Ezquerro et al., 2019, Table 1; Knoke et al., 2020, Supporting Information Table S6). Originally, the pay-off matrix shows to which degree all indicators are fulfilled on average when the landscape is optimized for only one indicator. The average trade-offs between the one (optimized) indicator and all other (non-optimized) indicators are therewith shown. The fulfillment of these non-optimized indicators reveals synergies or antagonisms between the indicators. A robust pendant to this approach can be easily conducted with the *optimLanduse* package as the degrees of fulfillment are delivered straightaway using the *calcPerformance()* function.
 
-In contrast to the original approach, each indicator has a set of performances ($U_i$, Equations 2 and 3 in Husmann et al., n.d.; Fig. 3 and 4 visualize the sets of indicator performances). Following the robust philosophy, we selected only the worst performance out of the set of uncertainties for each indicator. The resulting worst performances of the non-optimized indicators reveal the relative extent to which these indicators are fulfilled under the worst-case uncertainty scenario. It therewith reveals to which degree the indicators are antagonistic or synergistic. The indicator performances are expressed in relation to the best-possible fulfillment of the respective indicators (Equation 3 of Husmann et al., n.d.). In contrast to the original approach, we thus calculate relative degrees of fulfillment for each indicator.
+In contrast to the original approach, each indicator has a set of performances ($U_i$, Equations 2 and 3 in Husmann et al., 2022; Fig. 3 and 4 visualize the sets of indicator performances). Following the robust philosophy, we selected only the worst performance out of the set of uncertainties for each indicator. The resulting worst performances of the non-optimized indicators reveal the relative extent to which these indicators are fulfilled under the worst-case uncertainty scenario. It therewith reveals to which degree the indicators are antagonistic or synergistic. The indicator performances are expressed in relation to the best-possible fulfillment of the respective indicators (Equation 3 of Husmann et al., 2022). In contrast to the original approach, we thus calculate relative degrees of fulfillment for each indicator.
 
 The following code calculates a pay-off matrix using the *apply* function. For this, *payOffFun* encloses all calculation steps. *payOffFun* expects the name of the indicator that is to be considered in the optimization *x* and the data in the *optimLanduse* format *dat*. In *payOffFun*, firstly (1), the land-cover composition is optimized considering only the indicator defined in *x*. The resulting land-cover composition is then (2) passed as lower and as upper bounds to the land-cover optimization that considers all indicators. Accordingly, the solution of the second optimization (2) is exactly the result of the first optimization taking into account the indicator *x* only. The second optimization only aims to prepare an *optimLanduse* object from which the performances of all indicators can be calculated. It delivers the performances of all indicators when only the indicator *x* is considered in the optimization. From each indicator's set of calculated performances, only the minimum performance is selected (3) and then saved into the pay-off matrix. To sum up, each row of the pay-off matrix contains the minimum performances of all single indicators when the land-cover composition is optimized considering only one indicator. The name of this indicator considered in the optimization is written in the first column of each row. The names of all indicators are given in the table header. Consequently, the performances of the indicators considered are obligatorily best fulfilled so that the matrix's main diagonal contains the highest value of each indicator.
 
@@ -517,7 +517,7 @@ When optimized considering only the water supply protection (row 10), the indica
 
 ## The Use of *fixDistance*
 
-It can be advantageous to define distinct uncertainty levels for the calculation of the distances to the maximum achievable level (the reference) $d_{iu}$ (Equation 3 in Husmann et al., n.d.) and the actual distances under a certain land-cover composition $R_{liu}$ (Equation 5 in Husmann et al., n.d., see also Equation 9). Too narrow uncertainty spaces of $R_{liu}$ could restrict the state space of the distances too strictly. The broader uncertainty spaces allow for higher freedom of $R_{liu}$, which allows to cover more land-cover compositions. The distances are thus allowed to be higher. This usually results in a more similar composition of the land-cover composition with similar levels of uncertainty. The transitions between the portfolios under rising uncertainty values are smoother. The disadvantage of distinct uncertainty spaces is that the distances can no longer be straightforwardly  interpreted. The distances calculated using different uncertainty spaces considered in the denominator and the counter of Equation 3 (Husmann et al., n.d.) cannot be interpreted as a degree of fulfillment anymore.
+It can be advantageous to define distinct uncertainty levels for the calculation of the distances to the maximum achievable level (the reference) $d_{iu}$ (Equation 3 in Husmann et al., 2022) and the actual distances under a certain land-cover composition $R_{liu}$ (Equation 5 in Husmann et al., 2022, see also Equation 9). Too narrow uncertainty spaces of $R_{liu}$ could restrict the state space of the distances too strictly. The broader uncertainty spaces allow for higher freedom of $R_{liu}$, which allows to cover more land-cover compositions. The distances are thus allowed to be higher. This usually results in a more similar composition of the land-cover composition with similar levels of uncertainty. The transitions between the portfolios under rising uncertainty values are smoother. The disadvantage of distinct uncertainty spaces is that the distances can no longer be straightforwardly  interpreted. The distances calculated using different uncertainty spaces considered in the denominator and the counter of Equation 3 (Husmann et al., 2022) cannot be interpreted as a degree of fulfillment anymore.
 
 ```{r, fig.height = 5, fig.width = 7}
 
@@ -560,7 +560,7 @@ It can be seen that the land-cover allocation transition under increasing uncert
 
 # Suggested citation
 
-Husmann, K., von Groß, V., Fuchs J.M., Bödeker, K. (2022): optimLanduse: Robust Land-Use Optimization. R package version 1.1.0. <https://CRAN.R-project.org/package=optimLanduse>.
+Husmann, K., von Groß, V., Bödeker, K., Fuchs, J.M., Paul, C., Knoke, T. (2022): *optimLanduse*: A package for multiobjective land-cover composition optimization under uncertainty. *Methods Ecol Evol.* <https://doi.org/10.1111/2041-210X.14000>
 
 # Literature
 
@@ -570,7 +570,7 @@ Ezquerro, M., Pardos, M., Diaz-Balteiro, L. (2019): Integrating variable retenti
 
 Gosling, E., Reith, E., Knoke T., Paul, C. (2020): A goal programming approach to evaluate agroforestry systems in Eastern Panama. <em>Journal of Environmental Management</em>, 261:110248. <https://doi.org/10.1016/j.jenvman.2020.110248>
 
-Husmann, K., von Groß, V., Bödeker, K., Fuchs, J.M., Paul, C., Knoke, T. (no date): *optimLanduse*: A Package for Multiobjective Land-cover Composition Optimization under Uncertainty. *Methods Ecol Evol.* Under revision.
+Husmann, K., von Groß, V., Bödeker, K., Fuchs, J.M., Paul, C., Knoke, T. (2022): *optimLanduse*: A package for multiobjective land-cover composition optimization under uncertainty. *Methods Ecol Evol.*, 00, 1 - 10 <https://doi.org/10.1111/2041-210X.14000>
 
 Knoke, T., Paul, C., Hildebrandt, P. et al. (2016): Compositional diversity of rehabilitated tropical lands supports multiple ecosystem services and buffers uncertainties. <em>Nat Commun</EM> 7, 11877. <https://doi.org/10.1038/ncomms11877> 
 
