autoSearch minor updates

--- a/README.Rmd
+++ b/README.Rmd
@@ -85,7 +85,7 @@ This is followed by a summary of the results of the optimization:
 
 The *calcPerformance()* function attaches the portfolio performances of all indicators and scenarios as a data frame to the solved *optimLanduse* object. The data can be used for straightforward visualization of the performance (e.g. Fig. 3). The performance is defined as the relative distance to the maximum achievable level for each indicator and uncertainty scenario. It calculates as 1 - $d_{iu}$ (Equation 8, Husmann et al., 2022)
 
-The *autoSearch()* function Generates a list of all possible indicator combinations of the *coefTable* with their respective optimization results and the result that identifies the indicators that are best describing the current land-use decisions. The indicator combinations are converted into a list format, where each combination corresponds to a list entry. For each of these list entries, an optimization is then performed using the *initScenario()* and *solveScenario()* functions of the package. The result is added to the respective list entry. In addition, each entry is appended with the currently observed land-use portfolio and the land-use portfolio when all indicators are optimized together. This list can than be filtered and ordered to e. g. identify different potential transformation pathway and trade-offs and synergies between them. To allow the user the same option settings, the *initScenario()* arguments *uValue*, *optimisticRule* and *fixDistance* can be adjusted. The *landUseObs* has to be a data frame with two columns. The first column has to conain the land-use options. The second colum the respective shares.
+The *autoSearch()* function generates a list of all possible indicator combinations given in *coefTable* with their respective optimization results and the result that identifies the indicators that are best describing the currently observed land-use portfolio. The indicator combinations are exported as a list, where each combination corresponds to a list entry. For each of these list entries, an optimization is performed using the *initScenario()* and *solveScenario()* functions of the package. The result is saved into the respective list entry. In addition, each entry is appended with the currently observed land-use portfolio and the land-use portfolio when all indicators are optimized together. This list can than be filtered and ordered to e. g. identify different potential transformation pathway and trade-offs and synergies between them. To allow the user the same option settings, the *initScenario()* arguments *uValue*, *optimisticRule* and *fixDistance* can be adjusted. The *landUseObs* has to be a data frame with two columns. The first column has to contain the land-use options. The second column the respective shares.
 
 Each of the returned list contains different information, these include:
 
